fix : fixed textarea border issue on firefox

--- a/main/styles.scss
+++ b/main/styles.scss
@@ -1192,8 +1192,10 @@ form{
   & textarea{
     width: 100%;
     outline: none;
-    border: none;
+    border-style: solid;
+    border-width:.5em;
     border-radius: .5em;
+    border-color: transparent;
     padding-left: .5em;
     transition: background-color .2s ease;
     font-size: .9em;
@@ -1220,7 +1222,6 @@ form{
     min-height: 9em;
     max-width: 100%;
     min-width:100%;
-    padding-top:.6em;
     border-bottom-left-radius:0px;
     border-bottom-right-radius: 0px;
   }
